# Hyperion

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_QUICK_SETUP.md  LICENSE  MANIFEST.in  README.md  RELEASE_v2.0.0.md  SECURITY.md  VIRAL_POST.md  __init__.py  __main__.py  config.py  docker-compose.yml  launch.py  main.py  pyproject.toml  requirements.txt  server.py  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SOCIAL.md  SOCIAL_PREVIEW.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: publish.yml  tests.yml
core/: critic.py  decomposer.py  engine.py  expander.py  explorer.py  hyperion.py  memory.py  parallel_engine.py  reasoner.py  reflector.py  searcher.py  synthesizer.py  tools.py  verifier.py
docs/: ARCHITECTURE.md  TUTORIALS.md
examples/: 01_basic.py  02_multi_model.py  03_memory_tools.py  04_custom_tools.py  05_ollama.py  06_batch.py  07_custom_pipeline.py
models/: async_backend.py  backends.py  router.py
prompts/: critique.txt  decompose.txt  explore.txt  reason.txt  synthesize.txt  verify.txt
tests/: conftest.py  test_cache.py  test_core.py  test_memory.py  test_router.py  test_tools.py
utils/: logger.py  tokenizer.py
visual/: display.py  hyperion_dashboard.html  neural_bridge.py
