[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperion-llm"
version = "2.0.0"
description = "Advanced reasoning amplification engine for LLMs - makes any LLM think 100x deeper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Hyperion Contributors" }
]
keywords = [
    "llm",
    "reasoning",
    "ai",
    "chain-of-thought",
    "tree-of-thoughts",
    "agent",
    "openai",
    "openrouter",
    "ollama"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "diskcache>=5.4.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
ollama = [
    "ollama>=0.1.0",
]
all = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ollama>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ParsaSmahmoudi/hyperion"
Repository = "https://github.com/ParsaSmahmoudi/hyperion"
Documentation = "https://github.com/ParsaSmahmoudi/hyperion#readme"
"Bug Tracker" = "https://github.com/ParsaSmahmoudi/hyperion/issues"

[project.scripts]
hyperion = "hyperion.__main__:main"

[tool.setuptools]
packages = [
    "hyperion",
    "hyperion.core",
    "hyperion.models",
    "hyperion.prompts",
    "hyperion.utils",
    "hyperion.visual",
]
include-package-data = true

[tool.setuptools.package-data]
"hyperion" = ["prompts/*.txt", "visual/*.html"]
"hyperion.visual" = ["*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.coverage.run]
source = ["hyperion"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
